tests/urmoac/errors/net_issues/edge_length_0_multiple_log/neterrors_output.urmoac
length<=0;10000
length<=0;10002
